# runbook

./: .gitignore  CLAUDE.md  FEATURES.md  FEATURES_ARCHIVE.md  QA_SURVEY.md  QA_SURVEY_ARCHIVE.md  TECH_DEBT.md  TECH_DEBT_ARCHIVE.md  create_test_db.sql  docker-compose.yml  plan.md  product-guidelines.md  product.md  tech-stack.md  workflow.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04c9ba6d68fa_add_ai_provider_configs_table.py  27058fbd07b9_add_started_by_id_to_runs.py  39bcc5f1f3c1_add_avatar_jobtitle_preferences_to_users.py  4f2d80e9ab5e_add_experiment_role_assignments.py  4ffc79bc8a53_add_protocol_versioning_and_approval.py  6081e54decae_add_parameter_tags_to_run_images.py  634cdeb56c08_add_audit_logs_composite_index.py  666f36ddb116_initial_migration.py  6cec74d0f700_add_notification_tables.py  83fbf6595e21_org_and_team_role_enums.py  a1b2c3d4e5f6_rename_experiments_to_runs.py  a58c81d394d6_experiments_graph_engine_v2.py  a62961cc6422_add_result_schema_to_unit_op_definitions.py  a82b05858eda_add_rbac_tables.py  b7e2f3a89c12_add_protocol_roles_table.py  b7e75acf0874_add_revoked_offline_tokens.py  ca5ce36de9cd_add_is_draft_to_protocol_versions.py  e4682484bffe_add_equipment_table.py  ff7befb11e89_add_run_images_and_image_conversations.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/scripts/: show-seed-users.sh  update_unit_op_descriptions.sql  verify-experiments.py
backend/tests/: conftest.py
plans/: README.md
(+128 files in other folders)
