[tool.poetry]
name = "runbook-backend"
version = "0.1.0"
description = "Backend for Conductor/Runbook: AI-Powered Co-Pilot for Process Development"
authors = ["Trellis Bio <engineering@trellisbio.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
pydantic-ai = "^0.0.14"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
bcrypt = "^4.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
fpdf2 = "^2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
